--- a/Hleb_Mocha/index.html
+++ b/Hleb_Mocha/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="res/icon.ico">
 </head>
 <body>
-    <button id="loadButton" onclick="loadPage()">Load</button>
+    <button id="loadButton" onclick="loadPage()">Start</button>
     <audio id="bg-music" src="res/Hava Nagila.mp3" loop></audio>
 
     <video id="hleb" src="res/video1.mp4" autoplay muted playsinline></video>
